// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AmazonConnectStack > Matches the snapshot > Create data storage 1`] = `
{
  "Outputs": {
    "AmazonConnectInstanceArn": {
      "Export": {
        "Name": "AmazonConnectInstanceArn-test",
      },
      "Value": {
        "Fn::GetAtt": [
          "AmazonConnectConstruct1C9DFEFB",
          "Arn",
        ],
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "AmazonConnectConstruct1C9DFEFB": {
      "Properties": {
        "Attributes": {
          "AutoResolveBestVoices": true,
          "ContactflowLogs": true,
          "InboundCalls": true,
          "OutboundCalls": true,
        },
        "IdentityManagementType": "CONNECT_MANAGED",
        "InstanceAlias": "test",
      },
      "Type": "AWS::Connect::Instance",
    },
    "AmazonConnectConstructCallRecordingsStorageConfig2138FB32": {
      "Properties": {
        "InstanceArn": {
          "Fn::GetAtt": [
            "AmazonConnectConstruct1C9DFEFB",
            "Arn",
          ],
        },
        "ResourceType": "CALL_RECORDINGS",
        "S3Config": {
          "BucketName": {
            "Ref": "DataStorageBucket1A195487",
          },
          "BucketPrefix": "CallRecordings",
          "EncryptionConfig": {
            "EncryptionType": "KMS",
            "KeyId": {
              "Fn::Join": [
                "",
                [
                  "arn:",
                  {
                    "Ref": "AWS::Partition",
                  },
                  ":kms:us-east-1:000000000000:key/1234abcd-12ab-34cd-56ef-1234567890ab",
                ],
              ],
            },
          },
        },
        "StorageType": "S3",
      },
      "Type": "AWS::Connect::InstanceStorageConfig",
    },
    "AmazonConnectConstructChatTranscriptsStorageConfig0CCF0AA9": {
      "Properties": {
        "InstanceArn": {
          "Fn::GetAtt": [
            "AmazonConnectConstruct1C9DFEFB",
            "Arn",
          ],
        },
        "ResourceType": "CHAT_TRANSCRIPTS",
        "S3Config": {
          "BucketName": {
            "Ref": "DataStorageBucket1A195487",
          },
          "BucketPrefix": "ChatTranscripts",
          "EncryptionConfig": {
            "EncryptionType": "KMS",
            "KeyId": {
              "Fn::Join": [
                "",
                [
                  "arn:",
                  {
                    "Ref": "AWS::Partition",
                  },
                  ":kms:us-east-1:000000000000:key/1234abcd-12ab-34cd-56ef-1234567890ab",
                ],
              ],
            },
          },
        },
        "StorageType": "S3",
      },
      "Type": "AWS::Connect::InstanceStorageConfig",
    },
    "DataStorageBucket1A195487": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
        "BucketName": "amazon-connect-test",
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "DataStorageBucketPolicyAD94CA11": {
      "Properties": {
        "Bucket": {
          "Ref": "DataStorageBucket1A195487",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:DeleteObject*",
                "s3:PutObject",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Principal": {
                "Service": "connect.amazonaws.com",
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "DataStorageBucket1A195487",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "DataStorageBucket1A195487",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`AmazonConnectStack > Matches the snapshot > Identity management is Directory service 1`] = `
{
  "Outputs": {
    "AmazonConnectInstanceArn": {
      "Export": {
        "Name": "AmazonConnectInstanceArn-test",
      },
      "Value": {
        "Fn::GetAtt": [
          "AmazonConnectConstruct1C9DFEFB",
          "Arn",
        ],
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "AmazonConnectConstruct1C9DFEFB": {
      "Properties": {
        "Attributes": {
          "AutoResolveBestVoices": true,
          "ContactflowLogs": true,
          "InboundCalls": true,
          "OutboundCalls": true,
        },
        "DirectoryId": "d-0000000000",
        "IdentityManagementType": "EXISTING_DIRECTORY",
        "InstanceAlias": "test",
      },
      "Type": "AWS::Connect::Instance",
    },
    "AmazonConnectConstructCallRecordingsStorageConfig2138FB32": {
      "Properties": {
        "InstanceArn": {
          "Fn::GetAtt": [
            "AmazonConnectConstruct1C9DFEFB",
            "Arn",
          ],
        },
        "ResourceType": "CALL_RECORDINGS",
        "S3Config": {
          "BucketName": {
            "Ref": "DataStorageBucket1A195487",
          },
          "BucketPrefix": "CallRecordings",
          "EncryptionConfig": {
            "EncryptionType": "KMS",
            "KeyId": {
              "Fn::Join": [
                "",
                [
                  "arn:",
                  {
                    "Ref": "AWS::Partition",
                  },
                  ":kms:us-east-1:000000000000:key/1234abcd-12ab-34cd-56ef-1234567890ab",
                ],
              ],
            },
          },
        },
        "StorageType": "S3",
      },
      "Type": "AWS::Connect::InstanceStorageConfig",
    },
    "AmazonConnectConstructChatTranscriptsStorageConfig0CCF0AA9": {
      "Properties": {
        "InstanceArn": {
          "Fn::GetAtt": [
            "AmazonConnectConstruct1C9DFEFB",
            "Arn",
          ],
        },
        "ResourceType": "CHAT_TRANSCRIPTS",
        "S3Config": {
          "BucketName": {
            "Ref": "DataStorageBucket1A195487",
          },
          "BucketPrefix": "ChatTranscripts",
          "EncryptionConfig": {
            "EncryptionType": "KMS",
            "KeyId": {
              "Fn::Join": [
                "",
                [
                  "arn:",
                  {
                    "Ref": "AWS::Partition",
                  },
                  ":kms:us-east-1:000000000000:key/1234abcd-12ab-34cd-56ef-1234567890ab",
                ],
              ],
            },
          },
        },
        "StorageType": "S3",
      },
      "Type": "AWS::Connect::InstanceStorageConfig",
    },
    "DataStorageBucket1A195487": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
        "BucketName": "amazon-connect-test",
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "DataStorageBucketPolicyAD94CA11": {
      "Properties": {
        "Bucket": {
          "Ref": "DataStorageBucket1A195487",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:DeleteObject*",
                "s3:PutObject",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Principal": {
                "Service": "connect.amazonaws.com",
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "DataStorageBucket1A195487",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "DataStorageBucket1A195487",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`AmazonConnectStack > Matches the snapshot > Not create data storage 1`] = `
{
  "Outputs": {
    "AmazonConnectInstanceArn": {
      "Export": {
        "Name": "AmazonConnectInstanceArn-test",
      },
      "Value": {
        "Fn::GetAtt": [
          "AmazonConnectConstruct1C9DFEFB",
          "Arn",
        ],
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "AmazonConnectConstruct1C9DFEFB": {
      "Properties": {
        "Attributes": {
          "AutoResolveBestVoices": true,
          "ContactflowLogs": true,
          "InboundCalls": true,
          "OutboundCalls": true,
        },
        "IdentityManagementType": "CONNECT_MANAGED",
        "InstanceAlias": "test",
      },
      "Type": "AWS::Connect::Instance",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
